syntax = "proto3";

package cart_manage;

message CartAddRequest {
  string name = 1;
  float price = 2;
}

message CartItemResponse {
  int32 id = 1;
  string name = 2;
  double price = 3;
}

service CartManageService {
  rpc AddItem (CartAddRequest) returns (CartItemResponse) {}
}